se agregan modificaciones para cumplir ts lint

--- a/src/app/feature/reserva/components/listar-reserva/listar-reserva.component.html
+++ b/src/app/feature/reserva/components/listar-reserva/listar-reserva.component.html
@@ -6,6 +6,7 @@
       </div>
       <div class="card-body table-responsive">
         <table class="table table-md table-bordered">
+          <caption>Resumen de todas las reservas</caption>
           <thead>
             <tr>
               <th scope="col">Identificación Usuario</th>
