--- a/src/app/feature/reserva/components/crear-reserva/crear-reserva.component.html
+++ b/src/app/feature/reserva/components/crear-reserva/crear-reserva.component.html
@@ -2,7 +2,7 @@
   <div class="col-10 offset-1">
     <div class="card">
       <div class="card-header text-center bg-dark text-light">
-        Crear Reserva
+        <h3>Crear Reserva</h3>
       </div>
       <div class="card-body">
         <form [formGroup]="reservaForm" (ngSubmit)="crear()">
@@ -86,7 +86,7 @@
             </div>
   
             <div class="mt-2 d-flex justify-content-end">
-              <button type="submit" class="btn btn-dark rounded-pill">Crear Reserva</button>
+              <button id="createButton" type="submit" class="btn btn-dark rounded-pill">Crear Reserva</button>
             </div>
           </div>
         </form>
