--- a/src/app/feature/reserva/components/editar-reserva/editar-reserva.component.html
+++ b/src/app/feature/reserva/components/editar-reserva/editar-reserva.component.html
@@ -2,7 +2,7 @@
   <div class="col-10 offset-1">
     <div class="card">
       <div class="card-header text-center bg-dark text-light">
-        Editar Reserva
+        <h3>Editar Reserva</h3>
       </div>
       <div class="card-body" *ngIf="editarReservaForm.controls.id">
         <form [formGroup]="editarReservaForm" (ngSubmit)="actualizar()">
@@ -92,7 +92,7 @@
             </div>
   
             <div class="mt-2 d-flex justify-content-end">
-              <button type="submit" class="btn btn-dark rounded-pill">Actualizar Reserva</button>
+              <button id="actualizarButton" type="submit" class="btn btn-dark rounded-pill">Actualizar Reserva</button>
             </div>
           </div>
         </form>
