--- a/src/app/feature/reserva/components/listar-reserva/listar-reserva.component.html
+++ b/src/app/feature/reserva/components/listar-reserva/listar-reserva.component.html
@@ -2,7 +2,7 @@
   <div class="col-10 offset-1">
     <div class="card">
       <div class="card-header text-center bg-dark text-light">
-        Lista de Reservas
+        <h3>Lista de Reservas</h3>
       </div>
       <div class="card-body table-responsive">
         <table class="table table-md table-bordered">
@@ -18,15 +18,15 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let reserva of listaDeReservas">
+            <tr *ngFor="let reserva of listaDeReservas; let i = index">
               <th>{{ reserva.identificacionUsuario }}</th>
               <td>{{ reserva.nombreUsuario }}</td>
               <td>{{ reserva.fechaCreacion }}</td>
               <td>{{ reserva.fechaReserva }}</td>
               <td>{{ reserva.valorAPagar }}</td>
               <td class="d-flex justify-content-around">
-                <button class="btn btn-outline-dark" [routerLink]="['/reserva/editar',reserva.id]">Editar</button>
-                <button class="btn btn-outline-danger" (click)="eliminarReserva(reserva)">Eliminar</button>
+                <button id="{{ 'editar-reserva' + i }}" class="btn btn-outline-dark " [routerLink]="['/reserva/editar',reserva.id]">Editar</button>
+                <button id="{{ 'eliminar-reserva' + i }}" class="btn btn-outline-danger eliminar-reserva" (click)="eliminarReserva(reserva)">Eliminar</button>
               </td>
             </tr>
           </tbody>
