--- a/src/app/feature/reserva/components/reserva/reserva.component.html
+++ b/src/app/feature/reserva/components/reserva/reserva.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-secondary mb-2">
   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
     <li class="nav-item">
-      <a class="nav-link text-light" id="linkReserva" routerLink="./" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Reserva</a>
+      <a class="nav-link text-light reserva" id="linkReserva" routerLink="./" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Reserva</a>
     </li>
     <li class="nav-item">
       <a class="nav-link text-light" id="linkCrearReserva" routerLink="./crear" routerLinkActive="active">Crear reserva</a>
