se corrige bug y codes smell

--- a/src/app/feature/reserva/components/listar-reserva/listar-reserva.component.html
+++ b/src/app/feature/reserva/components/listar-reserva/listar-reserva.component.html
@@ -19,7 +19,7 @@
           </thead>
           <tbody>
             <tr *ngFor="let reserva of listaDeReservas; let i = index">
-              <th>{{ reserva.identificacionUsuario }}</th>
+              <td>{{ reserva.identificacionUsuario }}</td>
               <td>{{ reserva.nombreUsuario }}</td>
               <td>{{ reserva.fechaCreacion }}</td>
               <td>{{ reserva.fechaReserva }}</td>
